--- a/index.html
+++ b/index.html
@@ -7,6 +7,45 @@
     <title>Practica 1.12</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Practica 6 texto</h1>
+        <nav>
+            <a href="https://www.cervantes.es/bibliotecas_documentacion_espanol/biografias/pekin_antonio_machado.htm">Biografía de Antonio Machado</a>
+            <a href="https://es.wikipedia.org/wiki/Antonio_Machado">Antonio Machado en Wikipedia</a>
+        </nav>
+    </header>
+    <section>
+        <h2>Amanecer en Valencia. Antonio Machado</h2>
+        <p>Estas rachas de marzo, en los desvanes<br>
+           --hacia la mar-- del tiempo; la paloma<br>
+           de pluma tornasol, los tulipanes<br>
+           gigantes del jardín, y el sol que asoma,<br>
+           bola de fuego entre dorada bruma,<br>
+           a iluminar la tierra valentina..<br>
+           ¡Hervor de leche y plata, añil y espuma,<br>
+           y velas blancas en la mar latina!<br>
+           Valencia de fecundas primaveras<br>
+           de floridas alumnias y arrozales,<br>
+           feliz quiero cantarte, como eras,<br>
+           domando a un ancho río en tus canales,<br>
+           al dios marino con tus albuferas,<br>
+           al centauro de amor con tus rosales.<br>
+           <br>
+           <img src="img/machado.jpg" title="Antonio Machado" alt="Antonio Machado">
+           <hr>
+        </p>
+        </section>
+        <section>
+            <h2>Valencia Ciudad de las Ciencias</h2>
+            <p>La Ciudad de las Ciencias de Valencia incluye:</p>
+            <ol>
+                <li>Palau de les arts.</li>
+                <li>Hemisféric</li>
+                <li>Umbracle</li>
+                <li>Museo de las Ciencias</li>
+                <li>Oceanográfic</li>
+            </ol>
+        </section>
+        
 </body>
 </html>
