--- a/index.html
+++ b/index.html
@@ -45,6 +45,30 @@
                 <li>Museo de las Ciencias</li>
                 <li>Oceanográfic</li>
             </ol>
+            <iframe width="900" height="400" src="https://www.cac.es/es/home.html">ERROR (no puede mostrarse el objeto)</iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3080.639506256485!2d-0.35267908437198503!3d39.454879221494586!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd6048e9d19b4381%3A0x62eb4407a5ebf894!2sCiudad%20de%20las%20Artes%20y%20las%20Ciencias!5e0!3m2!1ses!2ses!4v1573057123593!5m2!1ses!2ses" 
+    width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="">ERROR (no puede mostrarse el objeto)</iframe>
+            <object
+            type="application/pdf"
+            data="pdf/folleto.pdf"
+            style="width: 400px; height: 550px;">
+            ERROR (no puede mostrarse el objeto)
+            </object>
+            <object
+            type="application/pdf"
+            data="pdf/hemisferic.pdf"
+            style="width: 400px; height: 550px;">
+            ERROR (no puede mostrarse el objeto)
+            </object>
+            <object
+            type="application/x-shockwave-flash"
+            data="https://youtu.be/umyKv8a2AmU"
+            style="width: 425px; height:350px;">
+            <param
+            name="movie"
+            value="https://youtu.be/umyKv8a2AmU">
+            ERROR (no puede mostrarse el objeto)
+            </object>
         </section>
         
 </body>
