--- a/index.html
+++ b/index.html
@@ -51,24 +51,18 @@
             <object
             type="application/pdf"
             data="pdf/folleto.pdf"
-            style="width: 400px; height: 550px;">
+            style="width: 400px; height: 315px;">
             ERROR (no puede mostrarse el objeto)
             </object>
             <object
             type="application/pdf"
             data="pdf/hemisferic.pdf"
-            style="width: 400px; height: 550px;">
+            style="width: 400px; height: 315px;">
             ERROR (no puede mostrarse el objeto)
             </object>
-            <object
-            type="application/x-shockwave-flash"
-            data="https://youtu.be/umyKv8a2AmU"
-            style="width: 425px; height:350px;">
-            <param
-            name="movie"
-            value="https://youtu.be/umyKv8a2AmU">
-            ERROR (no puede mostrarse el objeto)
-            </object>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/umyKv8a2AmU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>ERROR (no puede mostrarse el objeto)</iframe>
+            
+        </iframe>
         </section>
         
 </body>
